# src/swagger_output.json
@@ -29,6 +29,22 @@
         }
       }
     },
+    "/api/refresh": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
     "/api/admins/signup": {
       "post": {
         "description": "",
